--- a/hardware/Quaranta/bootloaders/atmega/Makefile
+++ b/hardware/Quaranta/bootloaders/atmega/Makefile
@@ -210,6 +210,13 @@ atmega1284p_8m: AVR_FREQ = 8000000L
 atmega1284p_8m: LDSECTION  = --section-start=.text=0x1F000
 atmega1284p_8m: $(PROGRAM)_atmega1284p_8m.hex
 
+atmega1284p_tv: TARGET = atmega1284p
+atmega1284p_tv: MCU_TARGET = atmega1284p
+atmega1284p_tv: CFLAGS += '-DMAX_TIME_COUNT=F_CPU>>4' '-DNUM_LED_FLASHES=0' '-DBAUD_RATE=115200'
+atmega1284p_tv: AVR_FREQ = 14318180L 
+atmega1284p: LDSECTION  = --section-start=.text=0x1F000
+atmega1284p: $(PROGRAM)_atmega1284p_tv.hex
+
 atmega644p: TARGET = atmega644p
 atmega644p: MCU_TARGET = atmega644p
 atmega644p: CFLAGS += '-DMAX_TIME_COUNT=F_CPU>>4' '-DNUM_LED_FLASHES=0' '-DBAUD_RATE=57600'
